[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/caravan/screens/char_select.gd" id="1_char_select"]

[node name="CharSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_char_select")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "WHO RECEIVES THIS?"
horizontal_alignment = 1

[node name="ItemLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 0.3, 1)
text = "ITEM NAME"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CharacterGrid" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
columns = 4
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 8

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1

[node name="ButtonRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 24

[node name="ConfirmButton" type="Button" parent="VBoxContainer/ButtonRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 20
text = "CONFIRM"

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 20
text = "BACK"
